--- a/index.html
+++ b/index.html
@@ -12,13 +12,54 @@
 </head>
 
 <body>
-    <section class="header"> </section>
+    <section class="header">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg pl-0 pr-0">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo.png" alt="logo" width="160" class="img-log">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarNavDropdown">
+                    <span class="navbar-toggler-icon">
+                        <i class="fas fa-bars"></i>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item">
+                            <a href="#reservas"  class="nav-link"><b>Reservas</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#servicos"  class="nav-link"><b>Serviços</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#cardapio"  class="nav-link"><b>Cardápio</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#depoimentos"  class="nav-link"><b>Depoimentos</b>
+                            </a>
+                        </li>
+                    </ul>
+                    <a class="btn btn-white btn-icon">
+                        Meu Carrinho <span class="icon">
+                            <i class="fa fa-shopping-bag"></i> 
+                        </span>
+                    </a>
+                </div>
+            </nav>
+        </div>
+    </section>
     <section class="banner"> </section>
-    <section class="servicos"> </section>
-    <section class="cardapio"> </section>
-    <section class="depoimentos"> </section>
-    <section class="reserva"> </section>
+    <section class="servicos" id="servicos"> </section>
+    <section class="cardapio" id="cardapio"> </section>
+    <section class="depoimentos" id="depoimentos"> </section>
+    <section class="reserva" id="reservas"> </section>
+
     <footer></footer>
+
+    <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/popper.min.js"></script>
 </body>
 
 </html>
