--- a/index.html
+++ b/index.html
@@ -26,29 +26,72 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto mr-auto">
                         <li class="nav-item">
-                            <a href="#reservas"  class="nav-link"><b>Reservas</b></a>
+                            <a href="#reservas" class="nav-link"><b>Reservas</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#servicos"  class="nav-link"><b>Serviços</b></a>
+                            <a href="#servicos" class="nav-link"><b>Serviços</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#cardapio"  class="nav-link"><b>Cardápio</b></a>
+                            <a href="#cardapio" class="nav-link"><b>Cardápio</b></a>
                         </li>
                         <li class="nav-item">
-                            <a href="#depoimentos"  class="nav-link"><b>Depoimentos</b>
+                            <a href="#depoimentos" class="nav-link"><b>Depoimentos</b>
                             </a>
                         </li>
                     </ul>
                     <a class="btn btn-white btn-icon">
                         Meu Carrinho <span class="icon">
-                            <i class="fa fa-shopping-bag"></i> 
+                            <i class="fa fa-shopping-bag"></i>
                         </span>
                     </a>
                 </div>
             </nav>
         </div>
     </section>
-    <section class="banner"> </section>
+    <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1><b>Escolha sua comida <b class="color-primary">favorita</b></b></h1>
+                        <p>Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e
+                            segura.
+                        </p>
+                        <div>
+                            <a href="" class="btn btn-yellow mt-4 mr-3">Ver Cardápio</a>
+                            <a href="" class="btn btn-white btn-icon-left mt-4">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"></i>
+                                </span>(11) 98699-8008</a>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social mt-4">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+                <div class="col-6">
+                    <div class="card-banner">
+
+                    </div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/burguer.png" alt="imagem hamburguer">
+                    </div>
+                    <div class="card card-case">
+                        "Entrega rápida e funcionários simpáticos.
+                        <br>A comida chegou quente e
+                        <br> muito saborosa!"
+                        <span class="card-case-name"><b>Thiago Lopes</b></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="servicos" id="servicos"> </section>
     <section class="cardapio" id="cardapio"> </section>
     <section class="depoimentos" id="depoimentos"> </section>
