--- a/index.html
+++ b/index.html
@@ -92,8 +92,56 @@
             </div>
         </div>
     </section>
-    <section class="servicos" id="servicos"> </section>
-    <section class="cardapio" id="cardapio"> </section>
+    <section class="servicos" id="servicos">
+        <div class="background-servicos"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title"><b>Serviços</b></span>
+                    <h1 class="title"><b>Como são nossos serviços</b></h1>
+                </div>
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-pedido.svg" alt="" width="150">
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Fácil de pedir</b></p>
+                        <span>Você só precisa de alguns passos para pedir sua comida.</span>
+                    </div>
+
+                </div>
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-delivery.svg" alt="" width="250">
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Entrega rápida</b></p>
+                        <span>Nossa entrega é sempre pontual, rápida e segura.</span>
+                    </div>
+
+                </div>
+                <div class="col-4 mb-5">
+                    <div class="card-icon text-center">
+                        <img src="./img/icone-qualidade.svg" alt="" width="250">
+                    </div>
+                    <div class="card-text text-center mt-3">
+                        <p><b>Melhor qualidade</b></p>
+                        <span>Não só a rapidez na entrega, a qualidade também é o nosso forte.</span>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="cardapio" id="cardapio">
+        <div class="container">
+            <div class="row">
+                 <div class="col-12 text-center mb-5">
+                    
+                 </div>
+            </div>
+        </div>
+    </section>
     <section class="depoimentos" id="depoimentos"> </section>
     <section class="reserva" id="reservas"> </section>
 
@@ -103,6 +151,7 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
+
 </body>
 
 </html>
