--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -288,7 +288,7 @@
     <section class="depoimentos" id="depoimentos">
 
         <div class="background-depoimentos"></div>
-        
+
         <div class="container">
             <div class="row">
                 <div class="col-5 text-center">
@@ -343,8 +343,9 @@
                             </div>
                             <p class="texto-depoimento">
                                 <i class="fas fa-quote-left"></i>
-                                <span>Um jantar perfeito do começo ao fim. Comida, experiência, serviço... 
-                                    foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma viagem.</span>
+                                <span>Um jantar perfeito do começo ao fim. Comida, experiência, serviço...
+                                    foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma
+                                    viagem.</span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
                         </div>
@@ -389,11 +390,11 @@
                             <div class="col-7">
                                 <span class="hint-title"><b>Reserva</b></span>
                                 <h1 class="title"><b>Quer reservar um <br>horário?</b></h1>
-                                    <p class="pr-5">Mande uma mensagem clicando no botão abaixo
-                                        <br>
-                                        Reserve sua data e horário de forma simples e rápida.
-                                    </p>   
-                                    <a href="" class="btn btn-yellow mt-4">Fazer reserva</a>                             
+                                <p class="pr-5">Mande uma mensagem clicando no botão abaixo
+                                    <br>
+                                    Reserve sua data e horário de forma simples e rápida.
+                                </p>
+                                <a href="" class="btn btn-yellow mt-4">Fazer reserva</a>
                             </div>
                             <div class="col-5">
                                 <div class="card-reserva"></div>
@@ -408,7 +409,32 @@
         </div>
     </section>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 container-logo-footer">
+                    <img class="logo-footer" src="./img/logo.png" alt="">
+                </div>
+                <div class="col-6 container-texto-footer">
+                    <p class="mb-0">
+                        <b>Restaurante da Lu </b>&copy; Todos os direitos reservados.
+                    </p>
+                </div>
+                <div class="col-3 container-redes-footer">
+                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
