--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <section class="header hidden">
         <div class="container">
             <nav class="navbar navbar-expand-lg pl-0 pr-0">
                 <a class="navbar-brand" href="#">
@@ -48,7 +48,7 @@
             </nav>
         </div>
     </section>
-    <section class="banner">
+    <section class="banner hidden">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="servicos" id="servicos">
+    <section class="servicos hidden" id="servicos">
         <div class="background-servicos"></div>
         <div class="container">
             <div class="row">
@@ -133,7 +133,7 @@
             </div>
         </div>
     </section>
-    <section class="cardapio" id="cardapio">
+    <section class="cardapio hidden" id="cardapio">
         <div class="background-cardapio"></div>
         <div class="container">
             <div class="row">
@@ -285,7 +285,7 @@
             </div>
         </div>
     </section>
-    <section class="depoimentos" id="depoimentos">
+    <section class="depoimentos hidden" id="depoimentos">
 
         <div class="background-depoimentos"></div>
 
@@ -381,7 +381,7 @@
         </div>
         </div>
     </section>
-    <section class="reserva" id="reservas">
+    <section class="reserva hidden" id="reservas">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -409,7 +409,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="hidden">
         <div class="container">
             <div class="row">
                 <div class="col-3 container-logo-footer">
@@ -435,6 +435,75 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal-full" id="modalCarrinho">
+        <div class="m-header">
+            <div class="container">
+                <a href="" class="btn btn-white btn-sm float-right">Fechar</a>
+                <div class="etapas">
+                    <div class="etapa etapa1 active">1</div>
+                    <div class="etapa etapa2">2</div>
+                    <div class="etapa etapa3">3</div>
+                </div>
+                <p class="title-carrinho mt-4"><b id="lblTituloEtapa">Seu carrinho:</b></p>
+            </div>
+        </div>
+        <div class="m-body">
+            <div class="container">
+                <div id="itensCarrinho" class="row mr-0 mt-0">
+                    <div class="col-12 item-carrinho">
+                        <div class="img-produto">
+                            <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                                alt="">
+                        </div>
+                        <div class="dados-produto">
+                            <p class="title-produto"><b>Nome do produto</b></p>
+                            <p class="price-produto"><b>R$ 149,90</b></p>
+                        </div>
+                        <div class="add-carrinho">
+                            <span class="btn-menos">
+                                <i class="fas fa-minus"></i>
+                            </span>
+                            <span class="add-numero-itens">0</span>
+                            <span class="btn-mais">
+                                <i class="fas fa-plus"></i>
+                            </span>
+                            <span class="btn btn-remove">
+                                <i class="fa fa-times"></i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div id="localEntrega" class="row mr-0 mt-0 hidden"></div>
+                <div id="resumoCarrinho" class="row mr-0 mt-0 hidden"></div>
+            </div>
+        </div>
+        <div class="m-footer">
+            <div class="container">
+                <div class="container-total text-right mb-4">
+                    <p class="mb-0">
+                        <span> Subtotal:</span>
+                        <span id="lblSubTotal"> R$ 95,00</span>
+                    </p>
+                    <p class="mb-0 texto-entrega">
+                        <span> <i class="fas fa-motorcycle"> Entrega:</i>
+                        </span>
+                        <span id="lblValorEntrega">+ R$ 5,00</span>
+                    </p>
+                    <p class="mb-0 texto-total">
+                        <span> <b>Total:</b></span>
+                        <span class="valor-total" id="lblValorTotal"><b>R$ 100,00</b></span>
+                    </p>
+                    </mb-4>
+                </div>
+                <a class="btn btn-yellow float-right" id="btnEtapaPedido">Continuar</a>
+                <a class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">Revisar Pedido</a>
+                <a class="btn btn-yellow float-right hidden" id="btnEtapaResumo">Enviar Pedido</a>
+                <a class="btn btn-white float-right mr-3 hidden" id="btnVoltar">Voltar</a>
+                
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
