--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="header hidden">
+    <section class="header ">
         <div class="container">
             <nav class="navbar navbar-expand-lg pl-0 pr-0">
                 <a class="navbar-brand" href="#">
@@ -48,7 +48,7 @@
             </nav>
         </div>
     </section>
-    <section class="banner hidden">
+    <section class="banner ">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="servicos hidden" id="servicos">
+    <section class="servicos " id="servicos">
         <div class="background-servicos"></div>
         <div class="container">
             <div class="row">
@@ -133,7 +133,7 @@
             </div>
         </div>
     </section>
-    <section class="cardapio hidden" id="cardapio">
+    <section class="cardapio " id="cardapio">
         <div class="background-cardapio"></div>
         <div class="container">
             <div class="row">
@@ -143,141 +143,28 @@
                 </div>
 
                 <div class="col-12 container-menu">
-                    <a href="" class="btn btn-white btn-sm mr-3 active">
+                    <a id="menu-burgers" class="btn btn-white btn-sm mr-3 active" onclick="cardapio.metodos.obterItensCardapio('burgers')">
                         <i class="fas fa-hamburger"></i>&nbsp; Burgers
                     </a>
-                    <a href="" class="btn btn-white btn-sm mr-3">
+                    <a id="menu-pizzas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('pizzas')">
                         <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
                     </a>
-                    <a href="" class="btn btn-white btn-sm mr-3">
+                    <a id="menu-churrasco" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('churrasco')">
                         <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
                     </a>
-                    <a href="" class="btn btn-white btn-sm mr-3">
+                    <a id="menu-steaks" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('steaks')">
                         <i class="fas fa-bacon"></i>&nbsp; Steaks
                     </a>
-                    <a href="" class="btn btn-white btn-sm mr-3">
+                    <a id="menu-bebidas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('bebidas')">
                         <i class="fas fa-cocktail"></i>&nbsp; Bebidas
                     </a>
-                    <a href="" class="btn btn-white btn-sm mr-3">
+                    <a id="menu-sobremesas" class="btn btn-white btn-sm mr-3" onclick="cardapio.metodos.obterItensCardapio('sobremesas')">
                         <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
                     </a>
                 </div>
 
                 <div class="col-12">
-                    <div class="row" id="itensCardapio">
-                        <div class="col-3 mb-3">
-                            <div class="card card-item">
-                                <div class="img-produto">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                        alt="">
-                                </div>
-                                <p class="title-produto text-center mt-4">
-                                    <b>
-                                        nome
-                                    </b>
-                                </p>
-                                <p class="price-produto text-center">
-                                    <b>R$ 174,90</b>
-                                </p>
-                                <div class="add-carrinho">
-                                    <span class="btn-menos">
-                                        <i class="fas fa-minus"></i>
-                                    </span>
-                                    <span class="add-numero-itens">0</span>
-                                    <span class="btn-mais">
-                                        <i class="fas fa-plus"></i>
-                                    </span>
-                                    <span class="btn btn-add">
-                                        <i class="fa fa-shopping-bag"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3 mb-3">
-                            <div class="card card-item">
-                                <div class="img-produto">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                        alt="">
-                                </div>
-                                <p class="title-produto text-center mt-4">
-                                    <b>
-                                        nome
-                                    </b>
-                                </p>
-                                <p class="price-produto text-center">
-                                    <b>R$ 174,90</b>
-                                </p>
-                                <div class="add-carrinho">
-                                    <span class="btn-menos">
-                                        <i class="fas fa-minus"></i>
-                                    </span>
-                                    <span class="add-numero-itens">0</span>
-                                    <span class="btn-mais">
-                                        <i class="fas fa-plus"></i>
-                                    </span>
-                                    <span class="btn btn-add">
-                                        <i class="fa fa-shopping-bag"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3 mb-3">
-                            <div class="card card-item">
-                                <div class="img-produto">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                        alt="">
-                                </div>
-                                <p class="title-produto text-center mt-4">
-                                    <b>
-                                        nome
-                                    </b>
-                                </p>
-                                <p class="price-produto text-center">
-                                    <b>R$ 174,90</b>
-                                </p>
-                                <div class="add-carrinho">
-                                    <span class="btn-menos">
-                                        <i class="fas fa-minus"></i>
-                                    </span>
-                                    <span class="add-numero-itens">0</span>
-                                    <span class="btn-mais">
-                                        <i class="fas fa-plus"></i>
-                                    </span>
-                                    <span class="btn btn-add">
-                                        <i class="fa fa-shopping-bag"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-3 mb-3">
-                            <div class="card card-item">
-                                <div class="img-produto">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                                        alt="">
-                                </div>
-                                <p class="title-produto text-center mt-4">
-                                    <b>
-                                        nome
-                                    </b>
-                                </p>
-                                <p class="price-produto text-center">
-                                    <b>R$ 174,90</b>
-                                </p>
-                                <div class="add-carrinho">
-                                    <span class="btn-menos">
-                                        <i class="fas fa-minus"></i>
-                                    </span>
-                                    <span class="add-numero-itens">0</span>
-                                    <span class="btn-mais">
-                                        <i class="fas fa-plus"></i>
-                                    </span>
-                                    <span class="btn btn-add">
-                                        <i class="fa fa-shopping-bag"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="row" id="itensCardapio"></div>
                 </div>
                 <div class="col-12 text-center">
                     <a href="" class="btn btn-white btn-sm">Ver mais</a>
@@ -285,7 +172,7 @@
             </div>
         </div>
     </section>
-    <section class="depoimentos hidden" id="depoimentos">
+    <section class="depoimentos " id="depoimentos">
 
         <div class="background-depoimentos"></div>
 
@@ -381,7 +268,7 @@
         </div>
         </div>
     </section>
-    <section class="reserva hidden" id="reservas">
+    <section class="reserva " id="reservas">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -409,7 +296,7 @@
         </div>
     </section>
 
-    <footer class="hidden">
+    <footer class=>
         <div class="container">
             <div class="row">
                 <div class="col-3 container-logo-footer">
@@ -436,7 +323,7 @@
         </div>
     </footer>
 
-    <div class="modal-full" id="modalCarrinho">
+    <div class="modal-full hidden" id="modalCarrinho">
         <div class="m-header">
             <div class="container">
                 <a href="" class="btn btn-white btn-sm float-right">Fechar</a>
@@ -621,6 +508,8 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
+    <script type="text/javascript" src="./js/dados.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 
 </body>
 
