--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             </div>
                             <p class="texto-depoimento">
                                 <i class="fas fa-quote-left"></i>
-                                <span>Muito bom, recomento demais. Comida muito bem feita pelo chefe, atendimento dentro
+                                <span>Muito bom, recomendo demais. Comida muito bem feita pelo chefe, atendimento dentro
                                     dos parametros e boa comunicação com o cliente.</span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
