--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             segura.
                         </p>
                         <div>
-                            <a href="" class="btn btn-yellow mt-4 mr-3">Ver Cardápio</a>
+                            <a href="#cardapio" class="btn btn-yellow mt-4 mr-3">Ver Cardápio</a>
                             <a href="" class="btn btn-white btn-icon-left mt-4">
                                 <span class="icon-left">
                                     <i class="fa fa-phone"></i>
@@ -260,9 +260,9 @@
                             </p>
                         </div>
                     </div>
-                    <a href="" class="btn btn-sm btn-white btn-social active mr-3">1</a>
-                    <a href="" class="btn btn-sm btn-white btn-social mr-3">2</a>
-                    <a href="" class="btn btn-sm btn-white btn-social">3</a>
+                    <a class="btn btn-sm btn-white btn-social active mr-3">1</a>
+                    <a class="btn btn-sm btn-white btn-social mr-3">2</a>
+                    <a class="btn btn-sm btn-white btn-social">3</a>
                 </div>
             </div>
         </div>
